--- a/src/index.css
+++ b/src/index.css
@@ -27,8 +27,12 @@
 
 .image {
   align-items: center;
+  border-radius: 5px;
   display: flex;
-  height: 650px;
+  height: 100%;
+  max-height: 650px;
+  min-height: 650px;
+  overflow: hidden;
   width: 100%;
 }
 
